重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -121,14 +121,14 @@
         height: 9rem;
     }
 
-    .goods-price{
+    .goods-price {
         color: #333;
         font-size: 1rem;
         line-height: 2.5rem;
         font-weight: 700;
     }
 
-    .old-price{
+    .old-price {
         color: #999;
         font-size: 0.875rem;
         line-height: 1rem;
@@ -188,7 +188,8 @@
                                             <div class="goods-title">{$goods.title}</div>
                                             <p class="mui-ellipsis" style="line-height: 2.5rem">{$goods.content}</p>
                                             <div class="goods-price">
-                                                <strong class="price">¥{$goods.price|wp_money_format}</strong><span class="old-price">¥{$goods.old_price|wp_money_format}</span>
+                                                <strong class="price">¥{$goods.price|wp_money_format}</strong><span
+                                                    class="old-price">¥{$goods.old_price|wp_money_format}</span>
                                             </div>
                                         </dd>
                                     </dl>
