重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -186,7 +186,7 @@
                                         </dd>
                                         <dd class="mui-media-body">
                                             <div class="goods-title">{$goods.title}</div>
-                                            <p class="mui-ellipsis" style="line-height: 2.5rem">{$goods.content}</p>
+                                            <div class="mui-ellipsis" style="line-height: 2.5rem">{$goods.content}</div>
                                             <div class="goods-price">
                                                 <strong class="price">¥{$goods.price|wp_money_format}</strong><span
                                                     class="old-price">¥{$goods.old_price|wp_money_format}</span>
