--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -101,13 +101,7 @@
         padding: 0 0 0.375rem 0;
     }
 
-    .goods-title {
-        font-weight: 700;
-        padding: 0.375rem 0 0 0;
-        font-size: 1rem;
-        color: #5a5959;
-        border-bottom: 0.1rem solid #e1e3ea;
-    }
+
 
     .banner-picture {
         width: 100%;
@@ -121,8 +115,17 @@
         height: 9rem;
     }
 
+    .goods-title {
+        font-weight: 700;
+        padding: 0;
+        font-size: 1rem;
+        color: #5a5959;
+        border-bottom: 0.1rem solid #e1e3ea;
+        line-height: 1.5rem;
+    }
+
     .goods-price {
-        color: #333;
+        color: #cc044d;
         font-size: 1rem;
         line-height: 2.5rem;
         font-weight: 700;
@@ -186,7 +189,7 @@
                                         </dd>
                                         <dd class="mui-media-body">
                                             <div class="goods-title">{$goods.title}</div>
-                                            <div class="mui-ellipsis" style="line-height: 2.5rem">{$goods.content}</div>
+                                            <div class="mui-ellipsis" style="line-height: 1.5rem">{$goods.content}</div>
                                             <div class="goods-price">
                                                 <strong class="price">¥{$goods.price|wp_money_format}</strong><span
                                                     class="old-price">¥{$goods.old_price|wp_money_format}</span>
