重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -185,7 +185,7 @@
                                                  src="{$goods.cover|get_cover_url}"/>
                                             <i class="oblique-tag oblique-tag-presell">热卖</i>
                                         </dt>
-                                        <dd class="mui-media-body mui-pull-right">
+                                        <dd class="mui-media-body mui-pull-right" style="width: 3rem">
                                             放入果盘
                                         </dd>
                                         <dd class="mui-media-body">
