重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -141,7 +141,7 @@
     }
 
     .operation-wrapper{
-        border-left: 0.1rem black solid;
+        border-left: 0.1rem solid #e1e3ea;
         width: 3rem;
         padding: 0;
         margin: 0;
