重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -143,8 +143,13 @@
     .operation-wrapper{
         border-left: 0.1rem solid #e1e3ea;
         width: 3rem;
+        height: 5rem;
         padding: 0;
         margin: 0;
+    }
+
+    .operation{
+        height: 2.5rem;
     }
 </style>
 <body>
