重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -142,14 +142,16 @@
 
     .operation-wrapper{
         border-left: 0.1rem solid #e1e3ea;
-        width: 3rem;
+        width: 4rem;
         height: 5rem;
         padding: 0;
         margin: 0;
+        text-align: center;
     }
 
     .operation{
         height: 2.5rem;
+        vertical-align: middle;
     }
 </style>
 <body>
@@ -197,8 +199,8 @@
                                             <i class="oblique-tag oblique-tag-presell">热卖</i>
                                         </dt>
                                         <dd class="operation-wrapper mui-pull-right">
-                                            <p>放入果盘</p>
-                                            <p>立即购买</p>
+                                            <p class="operation">放入果盘</p>
+                                            <p class="operation">立即购买</p>
                                         </dd>
                                         <dd class="mui-media-body">
                                             <div class="goods-title">{$goods.title}</div>
