重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -150,7 +150,7 @@
     }
 
     .operation{
-        height: 2.5rem;
+        height: 3rem;
         vertical-align: middle;
     }
 </style>
@@ -204,7 +204,7 @@
                                         </dd>
                                         <dd class="mui-media-body">
                                             <div class="goods-title">{$goods.title}</div>
-                                            <div class="mui-ellipsis" style="max-height: 2rem; line-height: 1rem; white-space: normal; vertical-align: middle; overflow: hidden">{$goods.content}</div>
+                                            <div class="mui-ellipsis" style="max-height: 2rem; line-height: 1rem; white-space: normal; vertical-align: middle; overflow: hidden; margin-top: 0.3125rem">{$goods.content}</div>
                                             <div class="goods-price">
                                                 <strong class="price">¥{$goods.price|wp_money_format}</strong><span
                                                     class="old-price">¥{$goods.old_price|wp_money_format}</span>
