--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -22,6 +22,10 @@
         background: transparent;
     }
 
+    .mui-segmented-control .mui-control-item{
+        background-color: #F7F7F7;
+    }
+
     .mui-segmented-control.mui-scroll-wrapper .mui-control-item.mui-active {
         color: #e74c3c;
         font-weight: 700;
