重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -26,6 +26,10 @@
         background-color: #F7F7F7;
     }
 
+    .mui-segmented-control.mui-segmented-control-inverted .mui-control-item.mui-active{
+        background-color: #F7F7F7;
+    }
+
     .mui-segmented-control.mui-scroll-wrapper .mui-control-item.mui-active {
         color: #e74c3c;
         font-weight: 700;
