重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -61,7 +61,7 @@
     }
 
     .oblique-tag.oblique-tag-presell {
-        background: #E23352;
+        background: #FF6094;
     }
 
     .oblique-tag {
