--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -23,11 +23,13 @@
     }
 
     .mui-segmented-control .mui-control-item{
-        background-color: #F7F7F7;
+        background-color: rgba(247,247,247,.8);
+        opacity: 1;
     }
 
     .mui-segmented-control.mui-segmented-control-inverted .mui-control-item.mui-active{
-        background-color: #F7F7F7;
+        background-color: rgba(247,247,247,.8);
+        opacity: 1;
     }
 
     .mui-segmented-control.mui-scroll-wrapper .mui-control-item.mui-active {
