--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -209,8 +209,8 @@
                                             <i class="oblique-tag oblique-tag-presell">热卖</i>
                                         </dt>
                                         <dd class="operation-wrapper mui-pull-right">
-                                            <p class="operation">放入果盘</p>
-                                            <p class="operation">立即购买</p>
+                                            <p class="operation"><span class="mui-icon iconfont icon-iconfontbasket"></span></p>
+                                            <p class="operation"><span class="mui-icon iconfont icon-jiesuanfangshi"></span></p>
                                         </dd>
                                         <dd class="mui-media-body">
                                             <div class="goods-title">{$goods.title}</div>
