重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -161,6 +161,7 @@
 
     .operation{
         height: 3rem;
+        line-height: 3rem;
         vertical-align: middle;
     }
 </style>
@@ -209,8 +210,8 @@
                                             <i class="oblique-tag oblique-tag-presell">热卖</i>
                                         </dt>
                                         <dd class="operation-wrapper mui-pull-right">
-                                            <p class="operation"><span class="mui-icon iconfont icon-iconfontbasket"></span></p>
-                                            <p class="operation"><span class="mui-icon iconfont icon-jiesuanfangshi"></span></p>
+                                            <p class="operation"><span class="mui-icon iconfont icon-iconfontbasket" style="color: #FF840D; font-size: 1.5rem"></span></p>
+                                            <p class="operation"><span class="mui-icon iconfont icon-jiesuanfangshi" style="color: #F15D68; font-size: 1.5rem;"></span></p>
                                         </dd>
                                         <dd class="mui-media-body">
                                             <div class="goods-title">{$goods.title}</div>
