--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -210,8 +210,8 @@
                                             <i class="oblique-tag oblique-tag-presell">热卖</i>
                                         </dt>
                                         <dd class="operation-wrapper mui-pull-right">
-                                            <p class="operation"><span class="mui-icon iconfont icon-iconfontbasket" style="color: #FF840D; font-size: 1.5rem"></span></p>
-                                            <p class="operation"><span class="mui-icon iconfont icon-jiesuanfangshi" style="color: #F15D68; font-size: 1.5rem;"></span></p>
+                                            <p class="operation"><span class="mui-icon iconfont icon-shuiguo" style="color: #FF840D; font-size: 1.5rem"></span></p>
+                                            <p class="operation"><span>加入果盘</span></p>
                                         </dd>
                                         <dd class="mui-media-body">
                                             <div class="goods-title">{$goods.title}</div>
