重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -157,29 +157,28 @@
         padding: 0;
         margin: 0;
         text-align: center;
+        vertical-align: middle;
     }
 
     .operation{
-        height: 3rem;
-        line-height: 3rem;
         vertical-align: middle;
     }
 </style>
 <body>
-<!--<nav class="mui-bar mui-bar-tab">
+<nav class="mui-bar mui-bar-tab">
     <a class="mui-tab-item mui-active" href="#">
         <span class="mui-icon mui-icon-home"></span>
-        <span class="mui-tab-label">果园</span>
+        <span class="mui-tab-label">我的信息</span>
     </a>
     <a class="mui-tab-item" href="#">
         <span class="mui-icon iconfont icon-iconfontbasket"></span>
-        <span class="mui-tab-label">果篮</span>
+        <span class="mui-tab-label">我的果盘</span>
     </a>
     <a class="mui-tab-item" href="#" style="width: 2%">
         <span class="mui-icon iconfont icon-jiesuanfangshi"></span>
-        <span class="mui-tab-label">结算</span>
+        <span class="mui-tab-label">一键买单</span>
     </a>
-</nav>-->
+</nav>
 <div class="mui-content">
     <div id="slider" class="mui-slider mui-fullscreen">
         <div id="sliderSegmentedControl"
@@ -195,11 +194,11 @@
                 <div id="scrollJinPin" class="mui-scroll-wrapper">
                     <div class="mui-scroll"
                          style="-webkit-transform: translate3d(0px, 0px, 0px) translateZ(0px);">
-                        <!--<div class="banner-picture">
+                        <div class="banner-picture">
                             <volist name="slideShowList" id="slide">
                                 <img src="{$slide.img|get_cover_url}">
                             </volist>
-                        </div>-->
+                        </div>
                         <ul class="mui-table-view">
                             <volist name="goodsList" id="goods">
                                 <li class="mui-table-view-cell mui-media">
