重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -154,6 +154,7 @@
         border-left: 0.1rem solid #e1e3ea;
         width: 4rem;
         height: 5rem;
+        line-height: 5rem;
         padding: 0;
         margin: 0;
         text-align: center;
@@ -209,8 +210,7 @@
                                             <i class="oblique-tag oblique-tag-presell">热卖</i>
                                         </dt>
                                         <dd class="operation-wrapper mui-pull-right">
-                                            <p class="operation"><span class="mui-icon iconfont icon-shuiguo" style="color: #FF840D; font-size: 1.5rem"></span></p>
-                                            <p class="operation"><span>加入果盘</span></p>
+                                            <p class="operation"><span class="mui-icon iconfont icon-shuiguo" style="color: #FF840D; font-size: 1.5rem"></span></br><span>加入果盘</span></p>
                                         </dd>
                                         <dd class="mui-media-body">
                                             <div class="goods-title">{$goods.title}</div>
