重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -175,7 +175,7 @@
         <span class="mui-icon iconfont icon-iconfontbasket"></span>
         <span class="mui-tab-label">我的果盘</span>
     </a>
-    <a class="mui-tab-item" href="#" style="width: 2%">
+    <a class="mui-tab-item" href="#">
         <span class="mui-icon iconfont icon-jiesuanfangshi"></span>
         <span class="mui-tab-label">一键买单</span>
     </a>
@@ -210,7 +210,7 @@
                                             <i class="oblique-tag oblique-tag-presell">热卖</i>
                                         </dt>
                                         <dd class="operation-wrapper mui-pull-right">
-                                            <p class="operation"><span class="mui-icon iconfont icon-shuiguo" style="color: #FF840D; font-size: 1.5rem"></span></br><span>加入果盘</span></p>
+                                            <p class="operation"><span class="mui-icon iconfont icon-shuiguo" style="color: #FF840D; font-size: 1.5rem; display: block"></span><span style="display: inline">加入果盘</span></p>
                                         </dd>
                                         <dd class="mui-media-body">
                                             <div class="goods-title">{$goods.title}</div>
