重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -154,7 +154,6 @@
         border-left: 0.1rem solid #e1e3ea;
         width: 4rem;
         height: 5rem;
-        line-height: 5rem;
         padding: 0;
         margin: 0;
         text-align: center;
@@ -163,6 +162,10 @@
 
     .operation{
         vertical-align: middle;
+    }
+
+    .mui-bar-tab .mui-tab-item .mui-icon~.mui-tab-label{
+        display: inline;
     }
 </style>
 <body>
