重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -161,6 +161,9 @@
     }
 
     .operation{
+        position: absolute;
+        top: 50%;
+        margin: -20px 0 0 0;
         vertical-align: middle;
     }
 
