重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -178,11 +178,11 @@
         <span class="mui-icon mui-icon-home"></span>
         <span class="mui-tab-label">我的信息</span>
     </a>
-    <a class="mui-tab-item" href="#" style="background-color: #FF9900">
+    <a class="mui-tab-item" href="#" style="background-color: #FF9900; color:#FFF7EB">
         <span class="mui-icon iconfont icon-iconfontbasket"></span>
         <span class="mui-tab-label">我的果盘</span>
     </a>
-    <a class="mui-tab-item" href="#" style="background-color: #FF4683">
+    <a class="mui-tab-item" href="#" style="background-color: #FF4683; color:#FFF7EB">
         <span class="mui-icon iconfont icon-jiesuanfangshi"></span>
         <span class="mui-tab-label">一键买单</span>
     </a>
