--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -175,7 +175,7 @@
 <body>
 <nav class="mui-bar mui-bar-tab">
     <a class="mui-tab-item mui-active" href="#" style="background-color: #F8FAFA">
-        <span class="mui-icon mui-icon-home"></span>
+        <span class="mui-icon mui-icon-person"></span>
         <span class="mui-tab-label">我的信息</span>
     </a>
     <a class="mui-tab-item" href="#" style="background-color: #FF4683; color:#FFF7EB">
