重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -171,6 +171,16 @@
     .mui-bar-tab .mui-tab-item .mui-icon~.mui-tab-label{
         display: inline;
     }
+
+    .my-basket{
+        background-color: #FF9900;
+        color:#FFF7EB
+    }
+
+    .one-key-pay{
+        background-color: #FF4683;
+        color:#FFF7EB
+    }
 </style>
 <body>
 <nav class="mui-bar mui-bar-tab">
@@ -178,11 +188,11 @@
         <span class="mui-icon mui-icon-person"></span>
         <span class="mui-tab-label">我的信息</span>
     </a>
-    <a class="mui-tab-item" href="#" style="background-color: #FF9900; color:#FFF7EB">
+    <a class="mui-tab-item my-basket" href="#">
         <span class="mui-icon iconfont icon-shuiguo"></span>
         <span class="mui-tab-label">我的果盘</span>
     </a>
-    <a class="mui-tab-item" href="#" style="background-color: #FF4683; color:#FFF7EB">
+    <a class="mui-tab-item one-key-pay" href="#">
         <span class="mui-icon iconfont icon-jiesuanfangshi"></span>
         <span class="mui-tab-label">一键买单</span>
     </a>
