重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -340,7 +340,11 @@
     })(mui);
 
     function addToCart(goodsID){
-        mui.toast(goodsID);
+        if($userInfo){
+            mui.toast(goodsID);
+        }else{
+            mui.toast('请先绑定用户信息');
+        }
     }
 </script>
 </body>
