--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -263,6 +263,7 @@
         </div>
     </div>
 </div>
+<input type="hidden" value="{$userInfo}" id="userInfoHF">
 <include file="./Addons/Shop/View/default/User/_footer.html"/>
 <script type="text/javascript" src="{:ADDON_PUBLIC_PATH}/user/js/mui.min.js?v={:SITE_VERSION}"></script>
 <!--<script type="text/javascript" src="{:ADDON_PUBLIC_PATH}/user/js/mui.lazyload.js?v={:SITE_VERSION}"></script>
@@ -340,7 +341,7 @@
     })(mui);
 
     function addToCart(goodsID){
-        if($userInfo){
+        if(plus.navigator.getcookie("http://haozhixian.cn/")){
             mui.toast(goodsID);
         }else{
             mui.toast('请先绑定用户信息');
