--- a/Addons/Shop/View/default/User/bind_user.html
+++ b/Addons/Shop/View/default/User/bind_user.html
@@ -1,20 +1,39 @@
 <include file="./Addons/Shop/View/default/User/_head.html"/>
+<style type="text/css">
+    .mui-input-row label {
+        width: 20%;
+    }
+
+    .mui-input-row label ~ input {
+        width: 80%;
+    }
+</style>
 <body>
-<form class="mui-input-group" action="{:U('bind_account')}" method="post" onSubmit="return tgSubmit()">
-    <div class="mui-input-row">
-        <label for="truename">联系人:</label>
-        <input type="text" id="truename"  name="truename" placeholder="请输入联系人姓名，用作取货身份凭证">
-    </div>
-    <div class="mui-input-row">
-        <label for="mobile">手机号:</label>
-        <input type="text" id="mobile" name="mobile" class="mui-input-clear" placeholder="请输入联系人手机号码，用作取货身份凭证" data-input-clear="5"><span class="mui-icon mui-icon-clear mui-hidden"></span>
-    </div>
-    <div class="mui-button-row">
-        <button type="button" class="mui-btn mui-btn-danger" onclick="return false;">返回首页</button>&nbsp;&nbsp;
-        <button type="button" class="mui-btn mui-btn-primary" onclick="return false;">绑定账号</button>
-    </div>
-</form>
-<include file="./Addons/Shop/View/default/User/_footer.html"/>
+<header class="mui-bar mui-bar-nav">
+    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
+    <h1 class="mui-title">绑定账号</h1>
+</header>
+<div class="mui-content">
+    <form class="mui-input-group" action="{:U('bind_account')}" method="post" onSubmit="return tgSubmit()">
+        <div class="mui-input-row">
+            <label for="truename">联系人:</label>
+            <input type="text" id="truename" name="truename" placeholder="请输入联系人姓名，用作取货身份凭证">
+        </div>
+        <div class="mui-input-row">
+            <label for="mobile">手机号:</label>
+            <input type="text" id="mobile" name="mobile" class="mui-input-clear" placeholder="请输入联系人手机号码，用作取货身份凭证"
+                   data-input-clear="5"><span class="mui-icon mui-icon-clear mui-hidden"></span>
+        </div>
+        <div class="mui-button-row">
+            <button type="button" class="mui-btn mui-btn-danger" onclick="return false;">返回首页</button>
+            &nbsp;&nbsp;
+            <button type="button" class="mui-btn mui-btn-primary" onclick="return false;">绑定账号</button>
+        </div>
+    </form>
+    <include file="./Addons/Shop/View/default/User/_footer.html"/>
+</div>
+
+
 <script type="text/javascript" src="{:ADDON_PUBLIC_PATH}/user/js/mui.min.js?v={:SITE_VERSION}"></script>
 <script type="text/javascript">
     function tgSubmit() {
