重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/bind_user.html
+++ b/Addons/Shop/View/default/User/bind_user.html
@@ -1,11 +1,11 @@
 <include file="./Addons/Shop/View/default/User/_head.html"/>
 <style type="text/css">
     .mui-input-row label {
-        width: 20%;
+        width: 25%;
     }
 
     .mui-input-row label ~ input {
-        width: 80%;
+        width: 75%;
     }
 </style>
 <body>
@@ -21,7 +21,7 @@
         </div>
         <div class="mui-input-row">
             <label for="mobile">手机号:</label>
-            <input type="text" id="mobile" name="mobile" class="mui-input-clear" placeholder="请输入联系人手机号码，用作取货身份凭证"
+            <input type="text" id="mobile" name="mobile" class="mui-input-clear" placeholder="请输入手机号码"
                    data-input-clear="5"><span class="mui-icon mui-icon-clear mui-hidden"></span>
         </div>
         <div class="mui-button-row">
