--- a/Addons/Shop/View/default/User/bind_user.html
+++ b/Addons/Shop/View/default/User/bind_user.html
@@ -9,10 +9,10 @@
     }
 </style>
 <body>
-<header class="mui-bar mui-bar-nav">
+<div class="mui-bar mui-bar-nav">
     <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
     <h1 class="mui-title">绑定账号</h1>
-</header>
+</div>
 <div class="mui-content">
     <!--<form class="mui-input-group" action="{:U('bind_account')}" method="post" onSubmit="return tgSubmit()">
         <div class="mui-input-row">
