--- a/Addons/Shop/View/default/User/bind_user.html
+++ b/Addons/Shop/View/default/User/bind_user.html
@@ -14,7 +14,7 @@
     <h1 class="mui-title">绑定账号</h1>
 </div>
 <div class="mui-content">
-    <form class="mui-input-group" action="{:U('bind_account')}" method="post" onSubmit="return tgSubmit()">
+    <form class="mui-input-group" action="{:U('bind_user')}" method="post" onSubmit="return tgSubmit()">
         <div class="mui-input-row">
             <label for="truename">联系人:</label>
             <input type="text" id="truename" name="truename" placeholder="请输入联系人姓名，用作取货身份凭证">
