重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/bind_user.html
+++ b/Addons/Shop/View/default/User/bind_user.html
@@ -16,7 +16,7 @@
 </div>
 <div class="mui-content">
     <div class="mui-content-padded" style="margin: 5px;">
-        <form class="mui-input-group" action="{:U('bind_user')}" method="post" onSubmit="return tgSubmit()">
+        <form action="{:U('bind_user')}" method="post" onSubmit="return tgSubmit()">:before
             <div class="mui-input-row">
                 <label for="truename">联系人:</label>
                 <input type="text" id="truename" name="truename" value="{$info.truename}"
