重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/bind_user.html
+++ b/Addons/Shop/View/default/User/bind_user.html
@@ -14,9 +14,9 @@
 
     <h1 class="mui-title">绑定账号</h1>
 </div>
-<div class="mui-content">
+<div class="mui-content" style="padding-top: 3.75rem">
     <div class="mui-content-padded" style="margin: 5px;">
-        <form action="{:U('bind_user')}" method="post" onSubmit="return tgSubmit()">:before
+        <form action="{:U('bind_user')}" method="post" onSubmit="return tgSubmit()">
             <div class="mui-input-row">
                 <label for="truename">联系人:</label>
                 <input type="text" id="truename" name="truename" value="{$info.truename}"
