--- a/Addons/Shop/View/default/User/bind_user.html
+++ b/Addons/Shop/View/default/User/bind_user.html
@@ -16,7 +16,7 @@
 </div>
 <div class="mui-content" style="padding-top: 3.75rem">
     <div class="mui-content-padded" style="margin: 5px;">
-        <form action="{:U('bind_user')}" method="post" onSubmit="return tgSubmit()" style="background-color: #c8c7cc">
+        <form class="mui-input-group" action="{:U('bind_user')}" method="post" onSubmit="return tgSubmit()">
             <div class="mui-input-row">
                 <label for="truename">联系人:</label>
                 <input type="text" id="truename" name="truename" value="{$info.truename}"
