重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -346,7 +346,7 @@
                data:{
                    goodsID: goodsID
                },
-               dataType:json,
+               dataType:'json',
                type:'post',
                timeout:10000, //10秒
                success: function (response) {
