重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -340,7 +340,7 @@
          });*/
     })(mui);
     var userInfo = document.getElementById("userInfoHF");
-    function addToCart(goodsID){
+    function addToCart(goodsId){
         if(userInfo.getAttribute('value')){
             mui.ajax('http://haozhixian.cn/index.php?s=/addon/Shop/User/addToCart',{
                data:{
