重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -191,6 +191,7 @@
     <a class="mui-tab-item my-basket" href="#">
         <span class="mui-icon iconfont icon-shuiguo"></span>
         <span class="mui-tab-label">我的果盘</span>
+        <span class="mui-badge mui-badge-success mui-badge-inverted">3</span>
     </a>
     <a class="mui-tab-item one-key-pay" href="#">
         <span class="mui-icon iconfont icon-jiesuanfangshi"></span>
